fix: cast and crew being cut off in itemDetail page #243

--- a/src/routes/album/album.module.scss
+++ b/src/routes/album/album.module.scss
@@ -5,6 +5,64 @@ $border-radius: 20px;
 	.item-hero-image-container{
 		width: 22% !important;
 	}
+	.item-detail-cast {
+			max-height: 50vh;
+			overflow-y: auto;
+			mask-image: linear-gradient(to top, transparent, black 1.2em);
+			-webkit-mask-image: linear-gradient(to top, transparent, black 1.2em);
+			&-title {
+				position: sticky;
+				top: 0;
+				background: $clr-background-dark;
+				padding: 0.35em;
+				border-radius: 10px;
+				z-index: 1;
+			}
+			&-container {
+				display: flex;
+				flex-direction: column;
+				gap: 1em;
+			}
+			&-grid {
+				display: grid;
+				gap: 1em;
+				margin-bottom: 1em;
+				grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
+			}
+			&-card {
+				display: grid;
+				grid-template-columns: 6em 1fr;
+				gap: 0.5em;
+				align-items: center;
+				color: white !important;
+				text-decoration: none;
+				padding: 0.5em;
+				background: rgb(255 255 255 / 0);
+				transition: background $transition-time-default;
+				border-radius: $border-radius-default;
+				&:hover {
+					background: rgb(255 255 255 / 0.1);
+				}
+				&-image,
+				&-icon {
+					width: 6em;
+					height: 6em;
+					object-fit: cover;
+					border-radius: 100%;
+					box-shadow: $shadow-card-image;
+				}
+				&-icon {
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					font-size: 1em;
+					background: rgb(255 255 255 / 0.1);
+					.material-symbols-rounded {
+						font-size: 3em;
+					}
+				}
+			}
+		}
 }
 .item-detail-album {
 	&-track {
@@ -130,64 +188,7 @@ $border-radius: 20px;
 		align-items: start;
 		gap: 1em;
 
-		&-cast {
-			max-height: 50vh;
-			overflow-y: auto;
-			mask-image: linear-gradient(to top, transparent, black 1.2em);
-			-webkit-mask-image: linear-gradient(to top, transparent, black 1.2em);
-			&-title {
-				position: sticky;
-				top: 0;
-				background: $clr-background-dark;
-				padding: 0.35em;
-				border-radius: 10px;
-				z-index: 1;
-			}
-			&-container {
-				display: flex;
-				flex-direction: column;
-				gap: 1em;
-			}
-			&-grid {
-				display: grid;
-				gap: 1em;
-				margin-bottom: 1em;
-				grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
-			}
-			&-card {
-				display: grid;
-				grid-template-columns: 6em 1fr;
-				gap: 0.5em;
-				align-items: center;
-				color: white !important;
-				text-decoration: none;
-				padding: 0.5em;
-				background: rgb(255 255 255 / 0);
-				transition: background $transition-time-default;
-				border-radius: $border-radius-default;
-				&:hover {
-					background: rgb(255 255 255 / 0.1);
-				}
-				&-image,
-				&-icon {
-					width: 6em;
-					height: 6em;
-					object-fit: cover;
-					border-radius: 100%;
-					box-shadow: $shadow-card-image;
-				}
-				&-icon {
-					display: flex;
-					align-items: center;
-					justify-content: center;
-					font-size: 1em;
-					background: rgb(255 255 255 / 0.1);
-					.material-symbols-rounded {
-						font-size: 3em;
-					}
-				}
-			}
-		}
+		
 		&-link {
 			color: white;
 			text-decoration-color: rgb(255 255 255 / 0.5);
